--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -22,7 +22,9 @@
     "from data import get_loaders\n",
     "from train import train, test, check_input\n",
     "import models \n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt",
+    "!wget https://wehrmann.s3-us-west-2.amazonaws.com/agnews.zip",
+    "!unzip agnews.zip -d agnews/",
    ]
   },
   {
@@ -37,7 +39,7 @@
     "    print('\\nLabel Number: ')\n",
     "    print(train_loader.dataset.labels[instance_id])\n",
     "    print('\\nLabel String: ')\n",
-    "    print(classes[train_loader.dataset.labels[instance_id]])"
+    "    print(classes[train_loader.dataset.labels[instance_id]])"   
    ]
   },
   {
