--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -9,7 +9,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline"
-   ]   
+   ]
   },
   {
    "cell_type": "code",
@@ -22,7 +22,7 @@
     "from data import get_loaders\n",
     "from train import train, test, check_input\n",
     "import models \n",
-    "from matplotlib import pyplot as plt",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "    print('\\nLabel Number: ')\n",
     "    print(train_loader.dataset.labels[instance_id])\n",
     "    print('\\nLabel String: ')\n",
-    "    print(classes[train_loader.dataset.labels[instance_id]])"   
+    "    print(classes[train_loader.dataset.labels[instance_id]])"
    ]
   },
   {
